turing-talos/apps/opencloud/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opencloud
spec:
  parentRefs:
  - name: envoy-private
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - opencloud.jern.fi
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: opencloud
      port: 80
